Fix for section headers beign cut off
added top padding for section (h1) headers so that when selecting a
section from nav bar, fixed nav bar will nto cut off section header.

--- a/Fuenzalida_Website/style_boot.css
+++ b/Fuenzalida_Website/style_boot.css
@@ -10,7 +10,7 @@ html
 }
 body
 {
-	padding-top: 96px;
+	padding-top: 70px;
 }
 /*---Navigation---*/
 #nav-bar
@@ -58,9 +58,9 @@ body
 }
 .carousel-caption
 {
-    top: 50%;
+    top: 54%;
     transform: translateY(-50%);
-    bottom: initial!important
+    bottom: initial!important;
 }
 .carousel-caption h5
 {
@@ -71,15 +71,15 @@ body
 #about
 {
 	background: #efefef;
-    padding-top: 50px;
-    padding-bottom: 50px;
+    padding-bottom: 40px;
     color: #555;
 }
 #about h1
 {
+	padding-top: 90px;
 	text-align: center;
 	color: #555 !important;
-	padding-bottom: 10px;
+	padding-bottom: 5px;
 }
 #about h1::after
 {
@@ -110,6 +110,7 @@ body
 }
 #projects h1
 {
+	padding-top: 50px;
 	text-align: center;
 	color: #efefef !important;
 	padding-bottom: 10px;
@@ -154,10 +155,11 @@ body
 	color: #efefef !important;
 	background-attachment: fixed;
 	padding-top: 50px;
-	padding-bottom: 50px;
+	padding-bottom: 20px;
 }
 #skills h1
 {
+	padding-top: 50px;
 	text-align: center;
 	color: #efefef !important;
 	padding-bottom: 10px;
@@ -226,6 +228,7 @@ body
 }
 #contact h1
 {
+	padding-top: 50px;
 	text-align: center;
 	color: #555;
 }
